@@ -1,3 +1,7 @@
+2006-08-28 Benoit Grégoire  <bock@step.polymtl.ca>
+	* Add SimplePicture content type
+	* Fix #225 (For both nodes and networks)
+	
 2006-08-28 Max Horváth <max.horvath@maxspot.de>
 	* Integrated KML node list export
 	* Integrated PDF node list export
